map changes, again

--- a/localization/english/fodlan_traits_l_english.yml
+++ b/localization/english/fodlan_traits_l_english.yml
@@ -37,7 +37,7 @@
  trait_crest_minor_macuil:0 "Minor Crest of Macuil"
  trait_crest_minor_macuil_desc:0 "This character bears the Minor Crest of Macuil"
  trait_crest_major_macuil:0 "Major Crest of Macuil"
- trait_crest_major_macuil_desc:0 This character bears the Major Crest of Macuil"
+ trait_crest_major_macuil_desc:0 "This character bears the Major Crest of Macuil"
 
  trait_crest_minor_indech:0 "Minor Crest of Indech"
  trait_crest_minor_indech_desc:0 "This character bears the Minor Crest of Indech"
