--- a/localization/english/fodlan_namelists_l_english.yml
+++ b/localization/english/fodlan_namelists_l_english.yml
@@ -777,7 +777,7 @@
  Cloque:0 "Cloque"
  Deni:0 "Deni"
  Darlex:0 "Darlex"
- Eolianne:0 Eolianne"
+ Eolianne:0 "Eolianne"
  Lacis:0 "Lacis"
  Flannel:0 "Flannel"
  Flannelette:0 "Flannelette"
@@ -786,7 +786,7 @@
  Hessia:0 "Hessia"
  Intarsia:0 "Intarsia"
  Jamdani:0 "Jamdani"
- Lamé:0 "Lamé"
+ Lame:0 "Lamé"
  Madapola:0 "Madapola"
  Matelasse:0 "Matelasse"
  Milli:0 "Milli"
@@ -794,17 +794,17 @@
  Nankeen:0 "Nankeen"
  Neoprene:0 "Neoprene"
  Osna:0 "Osna"
- Plissé:0 "Plissé"
+ Plisse:0 "Plissé"
  Plush:0 "Plush"
  Rinzu:0 "Rinzu"
  Nishiki:0 "Nishiki"
- Samité:0 "Samité"
+ Samite:0 "Samité"
  Sateen:0 "Sateen"
  Scarlet:0 "Scarlet"
  Silnylon:0 "Silnylon"
  Taffeta:0 "Tafetta"
  Toile:0 "Toile"
- Suedé:0 "Suedé"
+ Suede:0 "Suedé"
  Velouria:0 "Velouria"
  Viyella:0 "Viyella"
  Voile:0 "Voile"
