tweaks and stuff

--- a/localization/english/fodlan_text_l_english.yml
+++ b/localization/english/fodlan_text_l_english.yml
@@ -22,4 +22,37 @@
  morfis_collective_noun:0 "Morfise"
  sreng:0 "Srengist"
  sreng_collective_noun:0 "Srengist"
- 
+ cermaite:0 "Cermaitan"
+ cermaitan_collective_noun:0 "Cermaitan"
+ aengese:0 "Aengisian"
+ aengese_collective_noun:0 "Aengisian"
+ aedin:0 "Aedite"
+ aedin_collective_noun:0 "Aedite"
+ dergish:0 "Derglish" 
+ dergish_collective_noun:0 "Derglish"
+ reqonn:0 "Reqonese"
+ reqonese_collective_noun:0 "Reqonese"
+ dantan:0 "Dantanian"
+ dantan_collective_noun:0 "Dantanian"
+ nuada:0 "Nuadan"
+ nuada_collective_noun:0 "Nuadan"
+ albinia:0 "Albinian"
+ albinian_collective_noun:0 "Albinian"
+ wolfskin:0 "Wolfskin"
+ wolfskin_collective_noun:0 "Wolfskin"
+ kitsune:0 "Kitsune"
+ kitsune_collective_noun:0 "Kitsune"
+ taguel:0 "Taguel"
+ taguel_collective_noun:0 "Taguel"
+ lian:0 "Lianese"
+ lianese_collective_noun:0 "Lianese"
+ harika:0 "Harikian"
+ harika_collective_noun:0 "Harikian"
+ atra:0 "Atran"
+ atran_collective_noun:0 "Atran"
+ imrudi:0 "Imrudite"
+ imrudi_collective_noun:0 "Imrudite"
+ kudamlar:0 "Kudamlarite"
+ kudamlar_collective_noun:0 "Kudamlarite"
+ denatlar:0 "Denatlian"
+ denatlar_collective_noun:0 "Denatlian"
