--- a/localization/english/fodlan_text_l_english.yml
+++ b/localization/english/fodlan_text_l_english.yml
@@ -56,3 +56,6 @@
  kudamlar_collective_noun:0 "Kudamlarite"
  denatlar:0 "Denatlian"
  denatlar_collective_noun:0 "Denatlian"
+ 
+ #Holy order
+ holy_order_knights_seiros:0 "The Knights Of Seiros"
