culture changes, some religion changes

--- a/localization/english/fodlan_text_l_english.yml
+++ b/localization/english/fodlan_text_l_english.yml
@@ -28,7 +28,7 @@
  aengese_collective_noun:0 "Aengisian"
  aedin:0 "Aedite"
  aedin_collective_noun:0 "Aedite"
- dergish:0 "Derglish" 
+ dergish:0 "Dergish" 
  dergish_collective_noun:0 "Derglish"
  reqonn:0 "Reqonese"
  reqonese_collective_noun:0 "Reqonese"
