looots of small changes

--- a/localization/english/fodlan_text_l_english.yml
+++ b/localization/english/fodlan_text_l_english.yml
@@ -20,8 +20,8 @@
  almyran_collective_noun:0 "Almyran"
  morfis:0 "Morfist"
  morfis_collective_noun:0 "Morfise"
- sreng:0 "Srengist"
- sreng_collective_noun:0 "Srengist"
+ sreng:0 "Srengi"
+ sreng_collective_noun:0 "Srengri"
  cermaite:0 "Cermaitan"
  cermaitan_collective_noun:0 "Cermaitan"
  aengese:0 "Aengisian"
