--- a/localization/english/titles_l_english.yml
+++ b/localization/english/titles_l_english.yml
@@ -2522,8 +2522,8 @@
  
  k_atra:0 "Atra"
  d_jibadapur:0 "Jibadapur"
- c_puzapur:0 "Puzapur"
- b_puzapur:0 "Puzapur"
+ c_puzapur:0 "Jibad"
+ b_puzapur:0 "Jibad"
  b_kodrut:0 "Kodrut"
  b_kanepa:0 "Kanepa"
  b_kheyrabad:0 "Kheyrabad"
