--- a/localization/english/fodlan_religion_l_english.yml
+++ b/localization/english/fodlan_religion_l_english.yml
@@ -4,3 +4,101 @@
  zanadic_religion_adj:0 "Zanadic"
  seirosite:0 "Seirosite"
  seirosite_adj:0 "Seirosite"
+ macuilite:0 "Macuilite"
+ macuilite_adj:0 "Macuilite"
+ indechite:0 "Indechite"
+ indechite_adj:0 "Indechite"
+ cicholite:0 "Cicholite"
+ cicholite_adj:0 "Cicholite"
+ ablehnist:0 "Ablehnist"
+ ablehnist_adj:0 "Ablehnist"
+ mirenist:0 "Mirenist"
+ mirenist_adj:0 "Mirenist"
+ iarthairic:0 "Iarthairic"
+ iarthairic_adj:0 "Iarthairic"
+ high_sothic:0 "High Sothic"
+ high_sothic_adj:0 "High Sothic"
+
+ buykisik_religion:0 "Buykisik Religion"
+ buykisik_adj:0 "Buykisik"
+ kizilisma:0 "Kizilisma"
+ kizilisma_adj:0 "Kizilisma"
+ denizavi:0 "Denizavi"
+ denizavi_adj:0 "Denizavi"
+ beyazisma:0 "Beyazisma"
+ beyazisma_adj:0 "Beyazisma"
+ siyakara:0 "Siyakara"
+ siyakara_adj:0 "Siyakara"
+ dogasil:0 "Dogasil"
+ dogasil_adj:0 "Dogasil"
+ karakaya:0 "Karakaya"
+ karakaya_adj:0 "Karakaya"
+
+ anthrapos_religion:0 "Agarthan"
+ anthrapos_religion_adj:0 "Agarthan"
+ agarthan:0 "Agarthan"
+ agarthan_adj:0 "Agarthan"
+ liberationist:0 "Liberationist"
+ liberationist_adj:0 "Liberationist"
+
+ dewa_sheta_ah_religion:0 "Dewa Sheta Ah"
+ dewa_sheta_ah_religion_adj:0 "Dewa Sheta Ah"
+ inetsaret:0 "Inetsaret"
+ inetsaret_adj:0 "Inetsaret"
+ nekfsaret:0 "Nekfsaret"
+ nekfsaret_adj:0 "Nekfsaret"
+ sekisaret:0 "Sekisaret"
+ sekisaret_adj:0 "Sekisaret"
+
+ lumentalism_religion:0 "Lumentalism"
+ lumentalism_religion_adj:0 "Lumentalism"
+ lumialue:0 "Lumialue"
+ lumialue_adj:0 "Lumialue"
+ vuristoalite:0 "Vuristoalite"
+ vuristoalite_adj:0 "Vuristoalite"
+
+ olgail_bilog_religion:0 "Olgail Bilog"
+ olgail_bilog_religion_adj:0 "Olgail Bilog"
+ lamhach:0 "Lamhach"
+ lamhach_adj:0 "Lamhach"
+ fuale:0 "Fuale"
+ fuale_adj:0 "Fuale"
+ talahm_ithir:0 "Talahm Ithir"
+ talahm_ithir_adj:0 "Talahm Ithir"
+ gaothe:0 "Gaothe"
+ gaothe_adj:0 "Gaothe"
+
+ pantheon_religion:0 "Pantheon"
+ pantheon_religion_adj:0 "Pantheon"
+ pantheon_faith:0 "Pantheon"
+ pantheon_faith_adj:0 "Pantheon"
+ comunetian_faith:0 "Comunetian"
+ comunetian_faith_adj:0 "Comunetian"
+
+ reqonn_de_opulencia_religion:0 "Reqonn de Opulencia"
+ reqonn_de_opulencia_religion_adj:0 "Reqonn de Opulencia"
+ reqonn_de_opulencia:0 "Reqonn de Opulencia"
+ reqonn_de_opulencia_adj:0 "Reqonn de Opulencia"
+ jebbilencia:0 "Jebbilencia"
+ jebbilencia_adj:0 "Jebbilencia"
+
+ saatpra_daanav_religion:0 "Saatpra Daanav"
+ saatpra_daanav_religion_adj:0 "Saatpra Daanav"
+ lmabhal:0 "Lmabhal"
+ lmabhal_adj:0 "Lmabhal"
+ kamajorma:0 "Kamajorma"
+ kamajorma_adj:0 "Kamajorma"
+ dinymori:0 "Dinymori"
+ dinymori_adj:0 "Dinymori"
+
+ tenolotiskardias_religion:0 "Tenolotiskardias"
+ tenolotiskardias_religion_adj:0 "Tenolotiskardias"
+ tenolotiskardias_faith:0 "Tenolotiskardias"
+ tenolotiskardias_faith_adj:0 "Tenolotiskardias"
+
+ tjonar_ormurinn_religion:0 "Tjonar Ormurinn"
+ tjonar_ormurinn_religion_adj:0 "Tjonar Ormurinn"
+ heimsormurinn:0 "Heimsormurinn"
+ heimsormurinn_adj:0 "Heimsormurinn"
+ mekeal:0 "Mekeal"
+ mekeal_adj:0 "Mekeal"
