--- a/localization/english/fodlan_traits_l_english.yml
+++ b/localization/english/fodlan_traits_l_english.yml
@@ -28,111 +28,155 @@
  trait_crest_minor_seiros_desc:0 "This character bears the Minor Crest of Seiros"
  trait_crest_major_seiros:0 "Major Crest of Seiros"
  trait_crest_major_seiros_desc:0 "This character bears the Major Crest of Seiros"
+ trait_crest_blood_seiros:0 "Blood of Seiros"
+ trait_crest_blood_seiros_desc:0 "This character has the warrior's blood of Seiros in their veins, Victor of the ancient War of Heroes"
 
  trait_crest_minor_flames:0 "Minor Crest of Flames"
  trait_crest_minor_flames_desc:0 "This character bears the Minor Crest of Flames"
  trait_crest_major_flames:0 "Major Crest of Flames"
  trait_crest_major_flames_desc:0 "This character bears the Major Crest of Flames"
+ trait_crest_blood_flames:0 "Blood of Flames"
+ trait_crest_blood_flames_desc:0 "This character has the divine blood of the Goddess in their veins, considered by many as heroes chosen by fate"
 
  trait_crest_minor_macuil:0 "Minor Crest of Macuil"
  trait_crest_minor_macuil_desc:0 "This character bears the Minor Crest of Macuil"
  trait_crest_major_macuil:0 "Major Crest of Macuil"
  trait_crest_major_macuil_desc:0 "This character bears the Major Crest of Macuil"
+ trait_crest_blood_macuil:0 "Blood of Macuil"
+ trait_crest_blood_macuil_desc:0 "This character has the soaring blood of Macuil in their veins, one of the Four Saints"
 
  trait_crest_minor_indech:0 "Minor Crest of Indech"
  trait_crest_minor_indech_desc:0 "This character bears the Minor Crest of Indech"
  trait_crest_major_indech:0 "Major Crest of Indech"
  trait_crest_major_indech_desc:0 "This character bears the Major Crest of Indech"
+ trait_crest_blood_indech:0 "Blood of Indech"
+ trait_crest_blood_indech_desc:0 "This character has the reclusive blood of indech in their veins, one of the Four Saints"
 
  trait_crest_minor_cichol:0 "Minor Crest of Cichol"
  trait_crest_minor_cichol_desc:0 "This character bears the Minor Crest of Cichol"
  trait_crest_major_cichol:0 "Major Crest of Cichol"
  trait_crest_major_cichol_desc:0 "This character bears the Major Crest of Cichol"
+ trait_crest_blood_cichol:0 "Blood of Cichol"
+ trait_crest_blood_cichol_desc:0 "This character has the striking blood of cichol in their veins, one of the Four Saints"
 
  trait_crest_minor_cethleann:0 "Minor Crest of Cethleann"
  trait_crest_minor_cethleann_desc:0 "This character bears the Minor Crest of Cethleann"
  trait_crest_major_cethleann:0 "Major Crest of Cethleann"
  trait_crest_major_cethleann_desc:0 "This character bears the Major Crest of Cethleann"
+ trait_crest_blood_cethleann:0 "Blood of Cethleann"
+ trait_crest_blood_cethleann_desc:0 "This character has the blessed blood of Cethleann in their veins, one of the Four Saints"
 
  trait_crest_minor_riegan:0 "Minor Crest of Riegan"
  trait_crest_minor_riegan_desc:0 "This character bears the Minor Crest of Riegan"
  trait_crest_major_riegan:0 "Major Crest of Riegan"
  trait_crest_major_riegan_desc:0 "This character bears the Major Crest of Riegan"
+ trait_crest_blood_riegan:0 "Blood of Riegan"
+ trait_crest_blood_riegan_desc:0 "This character has the determined blood of Riegan in their veins, one of the 10 Elites"
 
  trait_crest_minor_lamine:0 "Minor Crest of Lamine"
  trait_crest_minor_lamine_desc:0 "This character bears the Minor Crest of Lamine"
  trait_crest_major_lamine:0 "Major Crest of Lamine"
  trait_crest_major_lamine_desc:0 "This character bears the Major Crest of Lamine"
+ trait_crest_blood_lamine:0 "Blood of Lamine"
+ trait_crest_blood_lamine_desc:0 "This character has the protective blood of Lamine in their veins, one of the 10 Elites"
 
  trait_crest_minor_goneril:0 "Minor Crest of Goneril"
  trait_crest_minor_goneril_desc:0 "This character bears the Minor Crest of Goneril"
  trait_crest_major_goneril:0 "Major Crest of Goneril"
  trait_crest_major_goneril_desc:0 "This character bears the Major Crest of Goneril"
+ trait_crest_blood_goneril:0 "Blood of Goneril"
+ trait_crest_blood_goneril_desc:0 "This character has the mighty blood of Goneril in their veins, one of the 10 Elites"
 
  trait_crest_minor_gloucester:0 "Minor Crest of Gloucester"
  trait_crest_minor_gloucester_desc:0 "This character bears the Minor Crest of Gloucester"
  trait_crest_major_gloucester:0 "Major Crest of Gloucester"
  trait_crest_major_gloucester_desc:0 "This character bears the Major Crest of Gloucester"
+ trait_crest_blood_gloucester:0 "Blood of Gloucester"
+ trait_crest_blood_gloucester_desc:0 "This character has the proud blood of Gloucester in their veins, one of the 10 Elites"
 
  trait_crest_minor_gautier:0 "Minor Crest of Gautier"
  trait_crest_minor_gautier_desc:0 "This character bears the Minor Crest of Gautier"
  trait_crest_major_gautier:0 "Major Crest of Gautier"
  trait_crest_major_gautier_desc:0 "This character bears the Major Crest of Gautier"
+ trait_crest_blood_gautier:0 "Blood of Gautier"
+ trait_crest_blood_gautier_desc:0 "This character has the ruining blood of Gautier in their veins, one of the 10 Elites"
 
  trait_crest_minor_fraldarius:0 "Minor Crest of Fraldarius"
  trait_crest_minor_fraldarius_desc:0 "This character bears the Minor Crest of Fraldarius"
  trait_crest_major_fraldarius:0 "Major Crest of Fraldarius"
  trait_crest_major_fraldarius_desc:0 "This character bears the Major Crest of Fraldarius"
+ trait_crest_blood_fraldarius:0 "Blood of Fraldarius"
+ trait_crest_blood_fraldarius_desc:0 "This character has the lethal blood of Fraldarius in their veins, one of the 10 Elites"
 
  trait_crest_minor_dominic:0 "Minor Crest of Dominic"
  trait_crest_minor_dominic_desc:0 "This character bears the Minor Crest of Dominic"
  trait_crest_major_dominic:0 "Major Crest of Dominic"
  trait_crest_major_dominic_desc:0 "This character bears the Major Crest of Dominic"
+ trait_crest_blood_dominic:0 "Blood of Dominic"
+ trait_crest_blood_dominic_desc:0 "This character has the crushing blood of Dominic in their veins, one of the 10 Elites"
 
  trait_crest_minor_daphnel:0 "Minor Crest of Daphnel"
  trait_crest_minor_daphnel_desc:0 "This character bears the Minor Crest of Daphnel"
  trait_crest_major_daphnel:0 "Major Crest of Daphnel"
  trait_crest_major_daphnel_desc:0 "This character bears the Major Crest of Daphnel"
+ trait_crest_blood_daphnel:0 "Blood of Daphnel"
+ trait_crest_blood_daphnel_desc:0 "This character has the heroic blood of Daphnel in their veins, one of the 10 Elites"
 
  trait_crest_minor_charon:0 "Minor Crest of Charon"
  trait_crest_minor_charon_desc:0 "This character bears the Minor Crest of Charon"
  trait_crest_major_charon:0 "Major Crest of Charon"
  trait_crest_major_charon_desc:0 "This character bears the Major Crest of Charon"
+ trait_crest_blood_charon:0 "Blood of Charon"
+ trait_crest_blood_charon_desc:0 "This character has the thundering blood of Charon in their veins, one of the 10 Elites"
 
  trait_crest_minor_blaiddyd:0 "Minor Crest of Blaiddyd"
  trait_crest_minor_blaiddyd_desc:0 "This character bears the Minor Crest of Blaiddyd"
  trait_crest_major_blaiddyd:0 "Major Crest of Blaiddyd"
  trait_crest_major_blaiddyd_desc:0 "This character bears the Major Crest of Blaiddyd"
+ trait_crest_blood_blaiddyd:0 "Blood of Blaiddyd"
+ trait_crest_blood_blaiddyd_desc:0 "This character has the roaring blood of Blaiddyd in their veins, one of the 10 Elites"
 
  trait_crest_minor_aubin:0 "Minor Crest of Aubin"
  trait_crest_minor_aubin_desc:0 "This character bears the Minor Crest of Aubin"
  trait_crest_major_aubin:0 "Major Crest of Aubin"
  trait_crest_major_aubin_desc:0 "This character bears the Major Crest of Aubin"
+ trait_crest_blood_aubin:0 "Blood of Aubin"
+ trait_crest_blood_aubin_desc:0 "This character has the humble blood of Aubin, one of the Four Apostles"
 
  trait_crest_minor_chevalier:0 "Minor Crest of Chevalier"
  trait_crest_minor_chevalier_desc:0 "This character bears the Minor Crest of Chevalier"
  trait_crest_major_chevalier:0 "Major Crest of Chevalier"
  trait_crest_major_chevalier_desc:0 "This character bears the Major Crest of Chevalier"
+ trait_crest_blood_chevalier:0 "Blood of Chevalier"
+ trait_crest_blood_chevalier_desc:0 "This character has the strong blood of Chevalier, one of the Four Apostles"
 
  trait_crest_minor_ernest:0 "Minor Crest of Ernest"
  trait_crest_minor_ernest_desc:0 "This character bears the Minor Crest of Ernest"
  trait_crest_major_ernest:0 "Major Crest of Ernest"
  trait_crest_major_ernest_desc:0 "This character bears the Major Crest of Ernest"
+ trait_crest_blood_ernest:0 "Blood of Ernest"
+ trait_crest_blood_ernest_desc:0 "This character has the thorned blood of Ernest in their veins, thought to be a crest lost to history, it has been rediscovered by crestologists"
 
  trait_crest_minor_noa:0 "Minor Crest of Noa"
  trait_crest_minor_noa_desc:0 "This character bears the Minor Crest of Noa"
  trait_crest_major_noa:0 "Major Crest of Noa"
  trait_crest_major_noa_desc:0 "This character bears the Major Crest of Noa"
+ trait_crest_blood_noa:0 "Blood of Noa"
+ trait_crest_blood_noa_desc:0 "This character has the magical blood of Noa in their veins, one of the Four Apostles"
 
  trait_crest_minor_timotheos:0 "Minor Crest of Timotheos"
  trait_crest_minor_timotheos_desc:0 "This character bears the Minor Crest of Timotheos"
  trait_crest_major_timotheos:0 "Major Crest of Timotheos"
  trait_crest_major_timotheos_desc:0 "This character bears the Major Crest of Timotheos"
+ trait_crest_blood_timotheos:0 "Blood of Timotheos"
+ trait_crest_blood_thimotheos_desc:0 "This character has the whispering blood of Timotheos in their veins, one of the Four Apostles"
  
  trait_crest_minor_maurice:0 "Minor Crest of The Beast"
  trait_crest_minor_maurice_desc:0 "This character bears the Minor Crest of the Beast"
  trait_crest_major_maurice:0 "Major Crest of The Beast"
  trait_crest_major_maurice_desc:0 "This character bears the Major Crest of the Beast"
+ trait_crest_blood_maurice:0 "Blood of the Beast"
+ trait_crest_blood_maurice_desc:0 "This character has the dark blood of the Beast in their veins, the forgotten Elite"
 
  trait_crest_minor_malik:0 "Minor Gift of Malik"
  trait_crest_minor_malik_desc:0 "This character bears the Minor Gift of Malik"
