another bunch of changes

--- a/localization/english/fodlan_tenets_l_english.yml
+++ b/localization/english/fodlan_tenets_l_english.yml
@@ -1,2 +1,90 @@
 ﻿l_english:
- 
+ tenet_school_of_seiros_name:0 "Teachings of Seiros"
+ tenet_school_of_seiros_desc:0 "A branch of the Church of Seiros which focuses solely on how her most devout followers try to emulate their patron Saint, this branch encourages it's followers to develop their leadership skills and fight against those who would desecrate the word of the Goddess "
+
+ tenet_school_of_macuil_name:0 "Teachings of Macuil"
+ tenet_school_of_macuil_desc:0 "A branch of the Church of Seiros which focuses solely on how his most devout followers try to emulate their patron Saint, this branch encourages it's followers to think tactically on and off the battlefield and to punish those who've wronged them"
+
+ tenet_school_of_cichol_name:0 "Teachings of Cichol"
+ tenet_school_of_chichol_desc:0 "A branch of the Church of Seiros which focuses solely on how his most devout followers try to emulate their patron Saint, this branch encourages it's followers to do honest and hard work in order to provide a better life for them and their families"
+
+ tenet_school_of_indech_name:0 "Teachings of Indech"
+ tenet_school_of_indech_desc:0 "A branch of the Church of Seiros which focuses solely on how his most devout followers try to emulate their patron Saint, this branch encourages it's followers to devote their time to embrace the pen and not the sword, knowledge and peace is the path that is to be embraced"
+
+ tenet_school_of_cethleann_name:0 "Teachings of Cethleann"
+ tenet_school_of_cethleann_desc:0 "A branch of the Church of Seiros which focuses solely on how her most devout followers try to emulate their patron Saint, this branch encourages it's followers to offer kindness, healing and protection to those in need and to embrace causes greater than themselves"
+
+ tenet_ablehnistic_ways_name:0 "The Leader's Path"
+ tenet_ablehnistic_ways_desc:0 "An oath for those who wish to walk the path of the sword in order to lessen the church's authority by show of force rather than words, for in order to truly bring freedom to the people of the world those who take this vow swear to fight for a future they believe in, no matter the cost"
+
+ tenet_pen_my_sword_name:0 "The People's Path"
+ tenet_pen_my_sword_desc:0 "An oath for those who wish to walk a peaceful path against church authority, rather than take up arms those who make this vow swear to reason and debate instead of resorting to warfare, fighting for a future one believes in is a path worth walking, yet not all battles are fought with blood"
+
+ tenet_cultured_armies_name:0 "Homeland Discount"
+ tenet_cultured_armies_desc:0 "Being a mercenary is a tough life frought with danger and adventure and thus having to put a high price for their blades is an understandable agreement for some, though some remember their homeland with fondness and thus tend to give their countrymen a little price lien for their services"
+
+ tenet_lamhach_teachings_name:0 "Teachings of Lamhach"
+ tenet_lamhach_teachings_desc:0 ""
+
+ tenet_fuale_teachings_name:0 "Teachings of Fuale"
+ tenet_fuale_teachings_desc:0 ""
+
+ tenet_talahm_ithir_teachings_name:0 "Teachings of Talahm ithir"
+ tenet_talahm_ithir_teachings_desc:0 ""
+
+ tenet_gaothe_teachings_name:0 "Teachings of Gaothe"
+ tenet_gaothe_teachings_desc:0 ""
+
+ tenet_the_great_hunt_name:0 "The Great Hunt"
+ tenet_the_great_hunt_desc:0 ""
+
+ tenet_let_the_money_flow_name:0 "Let The Money Flow"
+ tenet_let_the_money_flow_desc:0 ""
+
+ tenet_legacy_of_trading_kings_name:0 "Legacy of The Trading Kings"
+ tenet_legacy_of_trading_kings_desc:0 ""
+
+ tenet_wonders_of_paradise_name:0 "Wonders of Paradise"
+ tenet_wonders_of_paradise_desc:0 ""
+
+ tenet_eminence_of_arcane_name:0 "Eminence of The Arcane"
+ tenet_eminence_of_arcane_desc:0 ""
+
+ tenet_heavenly_spirits_name:0 "Heavenly Spirits"
+ tenet_heavenly_spirits_desc:0 ""
+
+ tenet_consuming_the_darkness_name:0 "Consuming The Darkness"
+ tenet_consuming_the_darkness_desc:0 ""
+
+ tenet_throne_of_fire_name:0 "The Throne of Flames"
+ tenet_throne_of_fire_desc:0 ""
+
+ tenet_kizilisma_red_name:0 "The Book of Kizilisma"
+ tenet_kizilisma_red_desc:0 ""
+
+ tenet_denizavi_blue_name:0 "The Book of Denizavi"
+ tenet_denizavi_blue_desc:0 ""
+
+ tenet_beyazisma_white_name:0 "The Book of Beyazisma"
+ tenet_beyazisma_white_desc:0 ""
+
+ tenet_siyakara_black_name:0 "The Book of Siyakara"
+ tenet_siyakara_black_desc:0 ""
+
+ tenet_dogasil_green_name:0 "The Book of Dogasil"
+ tenet_dogasil_green_desc:0 ""
+
+ tenet_karakaya_brown_name:0 "The Book of Karakaya"
+ tenet_karakaya_brown_desc:0 ""
+
+ tenet_durga_abaka_name:0 ""Durga Abaka"
+ tenet_durga_abaka_desc:0 ""
+
+ tenet_bisalalinga_name:0 ""Bisalalinga"
+ tenet_bisalalinga_desc:0 ""
+
+ tenet_baildatyn_tsus_name:0 "Baildatyn Tsus"
+ tenet_baildatyn_tsus_desc:0 ""
+
+ tenet_polemichani_name:0 "Polemichani"
+ tenet_polemichani_desc:0 ""
