--- a/localization/english/fodlan_text_l_english.yml
+++ b/localization/english/fodlan_text_l_english.yml
@@ -30,7 +30,7 @@
  aedin_collective_noun:0 "Aedite"
  dergish:0 "Dergish" 
  dergish_collective_noun:0 "Derglish"
- reqonn:0 "Reqonese"
+ reqonese:0 "Reqonese"
  reqonese_collective_noun:0 "Reqonese"
  dantan:0 "Dantanian"
  dantan_collective_noun:0 "Dantanian"
