more fixes. error log down by 600kb :D

--- a/localization/english/fodlan_religion_l_english.yml
+++ b/localization/english/fodlan_religion_l_english.yml
@@ -20,7 +20,7 @@
  high_sothic_adj:0 "High Sothic"
 
  buykisik_religion:0 "Buykisik Religion"
- buykisik_adj:0 "Buykisik"
+ buykisik_religion_adj:0 "Buykisik"
  kizilisma:0 "Kizilisma"
  kizilisma_adj:0 "Kizilisma"
  denizavi:0 "Denizavi"
