--- a/localization/english/fodlan_text_l_english.yml
+++ b/localization/english/fodlan_text_l_english.yml
@@ -1,61 +1,6 @@
 ﻿l_english:
- #culture
- high_fodlan:0 "High Fodlan"
- high_fodlan_collective_noun:0 "High Fodlan"
- leicester:0 "Leicester"
- leicester_collective_noun:0 "Leicester"
- faerghus:0 "Faerghus"
- faerghus_collective_noun:0 "Faerghus"
- adrestian:0 "Adrestian"
- adrestian_collective_noun:0 "Adrestian"
- kupalan:0 "Kupalan"
- kupalan_collective_noun:0 "Kupalan"
- abyssian:0 "Abyssian"
- abyssian_collective_noun:0 "Abyssian"
- brigid:0 "Brigidan"
- brigid_collective_noun:0 "Brigidan"
- duscur:0 "Duscur"
- duscur_collective_noun:0 "Duscurian"
- almyran:0 "Almyran"
- almyran_collective_noun:0 "Almyran"
- morfis:0 "Morfist"
- morfis_collective_noun:0 "Morfise"
- sreng:0 "Srengi"
- sreng_collective_noun:0 "Srengri"
- cermaite:0 "Cermaitan"
- cermaitan_collective_noun:0 "Cermaitan"
- aengese:0 "Aengisian"
- aengese_collective_noun:0 "Aengisian"
- aedin:0 "Aedite"
- aedin_collective_noun:0 "Aedite"
- dergish:0 "Dergish" 
- dergish_collective_noun:0 "Derglish"
- reqonese:0 "Reqonese"
- reqonese_collective_noun:0 "Reqonese"
- dantan:0 "Dantanian"
- dantan_collective_noun:0 "Dantanian"
- nuada:0 "Nuadan"
- nuada_collective_noun:0 "Nuadan"
- albinia:0 "Albinian"
- albinian_collective_noun:0 "Albinian"
- wolfskin:0 "Wolfskin"
- wolfskin_collective_noun:0 "Wolfskin"
- kitsune:0 "Kitsune"
- kitsune_collective_noun:0 "Kitsune"
- taguel:0 "Taguel"
- taguel_collective_noun:0 "Taguel"
- lian:0 "Lianese"
- lianese_collective_noun:0 "Lianese"
- harika:0 "Harikian"
- harika_collective_noun:0 "Harikian"
- atra:0 "Atran"
- atran_collective_noun:0 "Atran"
- imrudi:0 "Imrudite"
- imrudi_collective_noun:0 "Imrudite"
- kudamlar:0 "Kudamlarite"
- kudamlar_collective_noun:0 "Kudamlarite"
- denatlar:0 "Denatlian"
- denatlar_collective_noun:0 "Denatlian"
- 
  #Holy order
  holy_order_knights_seiros:0 "The Knights Of Seiros"
+ 
+ #governments
+ alliance_government:0 "Alliance Feudalism"
