--- a/localization/english/titles_l_english.yml
+++ b/localization/english/titles_l_english.yml
@@ -291,6 +291,7 @@
  b_scarburg:0 "Scarburg"
 
  c_minster:0 "Minster"
+ b_minster:0 "Minster"
  b_stainford:0 "Stainford"
  b_castleford:0 "Castleford"
 
