more icons, more improvement

--- a/localization/replace/cw_date_l_english.yml
+++ b/localization/replace/cw_date_l_english.yml
@@ -7,30 +7,30 @@
  CW_DATE_Saturday:0 "Saturday"
  CW_DATE_Sunday:0 "Sunday"
  
- CW_DATE_January:0 "Great Tree Moon"
- CW_DATE_February:0 "Harpstring Moon"
- CW_DATE_March:0 "Garland Moon"
- CW_DATE_April:0 "Blue Sea Moon"
- CW_DATE_May:0 "Verdant Rain Moon"
- CW_DATE_June:0 "Horsebow Moon"
- CW_DATE_July:0 "Wyvern Moon"
- CW_DATE_August:0 "Red Wolf Moon"
- CW_DATE_September:0 "Ethereal Moon"
- CW_DATE_October:0 "Guardian Moon"
- CW_DATE_November:0 "Pegasus Moon"
- CW_DATE_December:0 "Lone Moon"
+ CW_DATE_January:0 "Great Tree Moon (1)"
+ CW_DATE_February:0 "Harpstring Moon (2)"
+ CW_DATE_March:0 "Garland Moon (3)"
+ CW_DATE_April:0 "Blue Sea Moon (4)"
+ CW_DATE_May:0 "Verdant Rain Moon (5)"
+ CW_DATE_June:0 "Horsebow Moon (6)"
+ CW_DATE_July:0 "Wyvern Moon (7)"
+ CW_DATE_August:0 "Red Wolf Moon (8)"
+ CW_DATE_September:0 "Ethereal Moon (9)"
+ CW_DATE_October:0 "Guardian Moon (10)"
+ CW_DATE_November:0 "Pegasus Moon (11)"
+ CW_DATE_December:0 "Lone Moon (12)"
  
- CW_DATE_Jan:0 "Great Tree Moon"
- CW_DATE_Feb:0 "Harpstring Moon"
- CW_DATE_Mar:0 "Garland Moon"
- CW_DATE_Apr:0 "Blue Sea Moon"
- CW_DATE_Jun:0 "Horsebow Moon"
- CW_DATE_Jul:0 "Wyvern Moon"
- CW_DATE_Aug:0 "Red Wolf Moon"
- CW_DATE_Sep:0 "Ethereal Moon"
- CW_DATE_Oct:0 "Guardian Moon"
- CW_DATE_Nov:0 "Pegasus Moon"
- CW_DATE_Dec:0 "Lone Moon"
+ CW_DATE_Jan:0 "Great Tree Moon (1)"
+ CW_DATE_Feb:0 "Harpstring Moon (2)"
+ CW_DATE_Mar:0 "Garland Moon (3)"
+ CW_DATE_Apr:0 "Blue Sea Moon (4)"
+ CW_DATE_Jun:0 "Horsebow Moon (6)"
+ CW_DATE_Jul:0 "Wyvern Moon (7)"
+ CW_DATE_Aug:0 "Red Wolf Moon (8)"
+ CW_DATE_Sep:0 "Ethereal Moon (9)"
+ CW_DATE_Oct:0 "Guardian Moon (10)"
+ CW_DATE_Nov:0 "Pegasus Moon (11)"
+ CW_DATE_Dec:0 "Lone Moon (12)"
  
  CW_DATE_Mon:0 "Mon"
  CW_DATE_Tue:0 "Tue"
