--- a/localization/english/titles_l_english.yml
+++ b/localization/english/titles_l_english.yml
@@ -2102,7 +2102,7 @@
 
  d_fahrob:0 "Fahrob"
  c_kuibulyen:0 "Kuibulyen"
- b_kuibulyen:0 "Kuibulyen"
+ b_kuibuylen:0 "Kuibulyen"
  b_hermok:0 "Hermok"
  b_novedeh:0 "Novedeh"
  b_haftaran:0 "Haftaran"
